// Original file: src/orders-items/proto/order-item.proto

import type { OrderItemResponse as _order_items_OrderItemResponse, OrderItemResponse__Output as _order_items_OrderItemResponse__Output } from '../order_items/OrderItemResponse';

export interface FindAllOrderItemResponse {
  'results'?: (_order_items_OrderItemResponse)[];
}

export interface FindAllOrderItemResponse__Output {
  'results': (_order_items_OrderItemResponse__Output)[];
}
